# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml  test-com.html
.github/workflows/: my-check.yml
page_loader/: __init__.py  cli.py  download_assets.py  download_files.py  logger.py  page_loader.py  prepare_html_and_assets.py  prepare_html_and_files.py  utils.py
page_loader/scripts/: page_loader.py
tests/: test_exeptions.py  test_page_loader.py
tests/fixtures/: courses.html  expected.html  expected_html.html  source_page.html
tmp/: ysemenyuk-github-io-test-page.html
