[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["ysemenuk <invent@list.ru>"]
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
requests = "^2.28.1"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
